--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/vicky-burmese-amber-logo.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO & AEO Meta Tags -->
     <title>Burmese Amber Price Guide</title>
+    <meta name="description" content="A comprehensive wholesale price guide for Burmese amber.">
+    <meta name="keywords" content="Burmese amber, Myanmar amber, Burmite, rough amber stones, wholesale gemstones, Thai gem export, amber price 2025, natural amber Thailand, ámbar birmano, الكهرمان البورمي, Vicky Amber, Silom Bangkok jewelry, gemstone trade Thailand">
+    <meta name="author" content="VICKY BURMESE AMBER & GEMS CO., LTD.">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="en, es, ar, hi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.vickyamber.com/">
+    <meta property="og:title" content="Wholesale Burmese Amber Price Guide 2025 | Natural Amber Stones from Myanmar | Vicky Amber & Gems Thailand">
+    <meta property="og:description" content="Explore authentic Burmese amber rough stones directly from Myanmar. Compare wholesale prices by color, rarity, and size. Export-ready lots with tax-included delivery to Thailand.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/vicky-burmese-amber-social-preview.jpg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Wholesale Burmese Amber Price Guide 2025 | Natural Amber Stones from Myanmar | Vicky Amber & Gems Thailand">
+    <meta name="twitter:description" content="Explore authentic Burmese amber rough stones directly from Myanmar. Compare wholesale prices by color, rarity, and size. Export-ready lots with tax-included delivery to Thailand.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/vicky-burmese-amber-social-preview.jpg">
+    
     <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
