--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
     <meta name="twitter:image" content="https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/vicky-burmese-amber-social-preview.jpg">
     
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      #app-background {
+        background-image: url('https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/roughamber/rough-amber-bg.webp');
+        background-size: cover;
+        background-position: center;
+      }
+      @media (max-width: 1024px) {
+        #app-background {
+          background-image: url('https://raw.githubusercontent.com/devoncasa/VickyLuxGems-Assets/main/roughamber/rough-amber-mbbg.webp');
+        }
+      }
+    </style>
     <script type="importmap">
 {
   "imports": {
