--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       }
       /* Utility for better touch scrolling */
       .touch-pan-x {
-        touch-action: pan-x;
+        touch-action: pan-x pan-y;
       }
     </style>
     <script type="importmap">
